<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Pic Search</string>
	<string name="display_activity_name">Enlarged Image</string>
	<string name="search_hint">Enter Search Term</string>
	<string name="search_desc">Search for Images</string>
	<string name="settings_desc">Settings</string>
	<string name="image_size">Image Size</string>
	<string name="image_type">Image Type</string>
	<string name="image_color">Image Color</string>
	<string name="image_site">Image Site</string>
	<string name="image_site_hint">example.com</string>
	<string name="share">Share</string>
	<string name="apply">Apply</string>
	<string name="reset">Reset</string>
	<color name="actionbar_color">#00000000</color>
</resources>
