<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:weightSum="10"
			android:orientation="horizontal">

	<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:hint="@string/search_hint"
			android:imeOptions="actionSearch"
			android:inputType="text"
			android:layout_weight="8"
			android:id="@+id/etSearch"/>

	<ImageButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_search"
			android:id="@+id/ibtnSearch"
			android:background="@null"
			android:layout_weight="1"
			android:contentDescription="@string/search_desc"/>

	<ImageButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_gear"
			android:id="@+id/ibtnSettings"
			android:background="@null"
			android:layout_weight="1"
			android:contentDescription="@string/settings_desc"/>
</LinearLayout>